Homework OOP Sem4 Edit3